Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,25 +1,25 @@
 {
-  "store_id": 4360,
-  "name": "thesecretstore",
   "domain": "thesecretstore.netlify.app",
-  "short_name": "thesecretstore",
-  "description": "thesecretstore",
+  "currency_symbol": "R$",
   "primary_color": "#222831",
-  "secondary_color": "#393e46",
-  "bg_color": "#ffffff",
   "theme": {
     "bootswatch": "_",
     "custom": "_"
   },
-  "logo": "/img/uploads/logo.png",
-  "mini_logo": "",
-  "icon": "/img/icon.png",
-  "large_icon": "/img/large-icon.png",
-  "favicon": "/img/uploads/favicon.png",
+  "bg_color": "#ffffff",
+  "logo": "/img/uploads/1629144718709-logo_the_secret_store-01.png",
+  "name": "thesecretstore",
+  "short_name": "The Secret Store",
   "lang": "pt_br",
   "currency": "BRL",
-  "currency_symbol": "R$",
-  "country_code": "BR",
+  "mini_logo": "",
+  "font_family": "_",
+  "favicon": "/img/uploads/4360-logo_secretxxx-01.png",
   "icons_font": "_",
-  "font_family": "_"
+  "country_code": "BR",
+  "secondary_color": "#393e46",
+  "icon": "/img/uploads/1629144718709-logo_the_secret_store-01.png",
+  "store_id": 4360,
+  "description": "A forma mais elegante e simples de acessar os mais prazerosos locais, ao alcance de seus dedos... Aproveite!",
+  "large_icon": "/img/uploads/1629144718709-logo_the_secret_store-01.png"
 }
