Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#ffffff",
   "logo": "/img/uploads/1629144718709-logo_the_secret_store-01.png",
-  "name": "thesecretstore",
+  "name": "The Secret Store",
   "short_name": "The Secret Store",
   "lang": "pt_br",
   "currency": "BRL",
